--- a/queryraiserapp/templates/adminassignedcomplaints.html
+++ b/queryraiserapp/templates/adminassignedcomplaints.html
@@ -10,100 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="{% static 'js/scripts.js' %}"></script>
 </head>
-<style>
-.overlay {
-    display: none; 
-    position: fixed; 
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); 
-    z-index: 1000; 
-    transition: opacity 0.3s ease-in-out; 
-}
 
-.overlay-content {
-    background-color: #fff;
-    margin: 15% auto; 
-    padding: 30px;
-    border-radius: 10px;
-    max-width: 500px;
-    position: relative;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-    animation: slideIn 0.4s ease-in-out; 
-    text-align: center; 
-    font-family: 'Arial', sans-serif; 
-}
-
-.close-button {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    font-size: 24px;
-    font-weight: bold;
-    color: #888;
-    cursor: pointer;
-    transition: color 0.2s;
-}
-
-.close-button:hover {
-    color: #e74c3c;
-}
-.overlay-content h3 {
-    font-size: 24px;
-    margin-bottom: 15px;
-    color: #333;
-}
-.overlay-content p {
-    font-size: 16px;
-    margin: 10px 0;
-    color: #555;
-    line-height: 1.5;
-}
-
-.overlay-content p strong {
-    color: #333;
-}
-
-@keyframes slideIn {
-    from {
-        transform: translateY(-30px);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-.overlay-content h3 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #007bff;
-    text-align: center; 
-}
-
-.complaint-details {
-    display: grid;
-    grid-template-columns: 1fr 2fr; 
-    gap: 10px; 
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.complaint-details label {
-    font-weight: bold;
-    text-align: left;
-}
-
-.complaint-details span {
-    text-align: left;
-}
-
-.assign-technician {
-    text-align: center; 
-}
-</style>
 <body>
     <header>
         <div class="header-container">
@@ -138,6 +45,11 @@
         </div>
     </header>
     <div class="main-container">
+        <div id="loading-spinner" class="spinner-overlay" style="display: none;">
+            <div class="spinner">
+                <img src="{% static 'images/loading.gif' %}" alt="">
+            </div>
+        </div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -366,6 +278,7 @@
     </script>
     <script>
     function getassignedcomplaints(){
+        showSpinner();
         fetch('/getassignedcomplaints/',{
             method: 'POST',
             headers: {
@@ -378,11 +291,12 @@
             console.log(data)
             const assignedcomplaintTableBody = document.querySelector('#assignedcomplaintstable tbody');
             assignedcomplaintTableBody.innerHTML = '';
-
+            hideSpinner();
             if(data.length===0){
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="8">No assigned complaints found right now.</td>';
                 assignedcomplaintTableBody.appendChild(row);
+                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -391,7 +305,7 @@
                         <td>${complaint.created_at}</td> 
                         <td style="color:#007bff;">${complaint.faculty__faculty_name}</td> 
                         <td style="color:#525b75;">${complaint.department__department_name}</td>
-                        <td style="color:#000;font-weight:590;">${complaint.title}</td>
+                        <td style="font-weight:570;">${complaint.title}</td>
                         <td style="color:#525b75;">${complaint.technician__technician_name}</td> 
                         <td style="color:#525b75;">${complaint.technician__technician_number}</td> 
                         <td><button class="save-button" style="display:flex;align-items:center;gap:5px;" onclick="sendmessage(this)" data-complaint="${encodeURIComponent(JSON.stringify(complaint))}">
@@ -403,10 +317,12 @@
                     `;
                     assignedcomplaintTableBody.appendChild(row);
                 });
+                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
+            hideSpinner();
         });
     }
     function sendmessage(button) {
