--- a/queryraiserapp/templates/adminfield.html
+++ b/queryraiserapp/templates/adminfield.html
@@ -46,6 +46,11 @@
         </div>
     </header>
     <div class="main-container">
+        <div id="loading-spinner" class="spinner-overlay" style="display: none;">
+            <div class="spinner">
+                <img src="{% static 'images/loading.gif' %}" alt="">
+            </div>
+        </div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -226,9 +231,9 @@
                 </div>
             </div>
 
-            <div class="fieldslist">
+            <div class="tablelist">
                 <div class="table-container">
-                    <table id="fieldstable">
+                    <table id="fieldstable" class="tables">
                         <thead>
                             <th>Field Name</th>
                             <th></th> 
@@ -268,7 +273,7 @@ navLinks.forEach(link => {
     document.addEventListener('DOMContentLoaded', () => {
             getFields();
         });
-
+        showSpinner();
         function getFields() {
             fetch('/getfields/', {
                 method: 'POST', 
@@ -281,12 +286,13 @@ navLinks.forEach(link => {
                 if (!response.ok) { 
                     throw new Error('Network response was not ok');
                 }
+                hideSpinner();
                 return response.json(); 
             })
             .then(data => {
                 const fieldTableBody = document.querySelector('#fieldstable tbody');
                 fieldTableBody.innerHTML = '';
-
+                hideSpinner();
                 if (data.length > 0) {
                     data.forEach(field => {
                         const row = document.createElement('tr');
@@ -300,18 +306,22 @@ navLinks.forEach(link => {
                         `;
                         fieldTableBody.appendChild(row);
                     });
+                    hideSpinner();
                 } else {
                     const row = document.createElement('tr');
                     row.innerHTML = '<td colspan="2">No fields found.</td>';
                     fieldTableBody.appendChild(row);
+                    hideSpinner();
                 }
             })
             .catch(error => {
                 console.error('Error fetching fields:', error);
+                hideSpinner();
             });
         }
         function deleteField(fieldName) {
             if(confirm("Are you sure you want to delete this field? This action will also delete all technicians associated with this field and cannot be undone.")){
+                showSpinner();
                 fetch('/deletefield/', {
                 method: 'POST',
                 headers: {
@@ -326,11 +336,14 @@ navLinks.forEach(link => {
                     getFields(); 
                     getTechnicians();
                     getTechnicianFieldsForDropdown(); 
+                    hideSpinner();
                 } else {
                     alert('Failed to delete field: '+data.error);
+                    hideSpinner();
                 }
             })
             .catch(error => console.error('Error:', error));
+            hideSpinner();
             }
         }
 
@@ -346,6 +359,7 @@ navLinks.forEach(link => {
             event.preventDefault();
             const form = event.target;
             const formData = new FormData(form);
+            showSpinner();
             fetch(form.action, {
                 method: form.method,
                 headers: {
@@ -360,13 +374,16 @@ navLinks.forEach(link => {
                     form.reset(); 
                     hideAddForms();
                     getFields(); 
+                    hideSpinner();
                 } else {
                     alert('Failed to add field: '+data.error); 
+                    hideSpinner();
                 }
             })
             .catch(error => {
                 console.error('Error adding field:', error);
                 alert('Error adding field. Please try again later.', error);
+                hideSpinner();
             });
         });
         function getCookie(name) {
