--- a/queryraiserapp/templates/admintechnician.html
+++ b/queryraiserapp/templates/admintechnician.html
@@ -46,6 +46,11 @@
         </div>
     </header>
     <div class="main-container">
+        <div id="loading-spinner" class="spinner-overlay" style="display: none;">
+            <div class="spinner">
+                <img src="{% static 'images/loading.gif' %}" alt="">
+            </div>
+        </div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -224,18 +229,18 @@
                         {% csrf_token %}
                         <input type="hidden" name="form_type" value="addtechnicianform" >
                         <div class="form-row">
-                            <label for="technicianname">Technician Name:</label>
+                            <label for="technicianname">Technician Name</label>
                             <input type="text" name="technicianname" id="technicianname" placeholder="Technician Name" required>
                         </div>
                         <div class="form-row">
-                            <label for="technicianfield">Field:</label>
+                            <label for="technicianfield">Field</label>
                             <select name="technicianfield" id="technicianfield" required>
                                 <option value="" disabled selected>Select Field</option>
                                 </select>
                         </div>
                         <div id="form-row">
                             <label for="phone">Phone Number(IN)</label>
-                            <input type="tel" id="phone" name="phone" placeholder="+91-XXXXXXXXXX" pattern="+?[6-9]\d{9,12}" required>     
+                            <input type="tel" id="phone" name="phone" placeholder="98XXXXXXXX" pattern="+?[6-9]\d{9,12}" required>     
                         </div>
                         <div class="button-container"> 
                             <button type="submit" id="addtechnicianbtn">Add</button>
@@ -244,9 +249,9 @@
                 </div>
             </div>
 
-            <div class="technicianlist"> 
+            <div class="tablelist"> 
                 <div class="table-container">
-                    <table id="techniciantable">
+                    <table id="techniciantable" class="tables">
                         <thead>
                             <th>Technician Name</th>
                             <th>Phone Number</th>
@@ -316,6 +321,7 @@
             }
         }
         function getTechnicians() {
+            showSpinner();
             fetch('/gettechnicians/',{
                 method: 'POST', 
                 headers: {
@@ -327,13 +333,14 @@
                 .then(data => {
                     const technicianTableBody = document.querySelector('#techniciantable tbody');
                     technicianTableBody.innerHTML = '';
+                    hideSpinner();
                     if (data.length > 0) {
                         data.forEach(technician => {
                             const row = document.createElement('tr');
                             row.innerHTML = `
                                 <td contenteditable="true" style="color:#3874ff;" id="technician_name_${technician.technician_number}">${technician.technician_name}</td>
-                                <td contenteditable="true" id="technician_number_${technician.technician_number}" style="color:black;">${technician.technician_number}</td>
-                                <td id="technician_field_${technician.technician_number}">${technician.technician_field__field_name}</td>
+                                <td contenteditable="true" id="technician_number_${technician.technician_number}">${technician.technician_number}</td>
+                                <td id="technician_field_${technician.technician_number}" style="color:#9fa6bc;">${technician.technician_field__field_name}</td>
                                 <td><button class="save-button" onclick="saveTechnician('${technician.technician_number}')">Save</button></td> 
                                 <td><button class="delete-button" onclick="deleteTechnician('${technician.technician_number}','${technician.technician_field__field_name}')">
                                     <svg style="margin-right: 3px;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" class="h-5 w-5 shrink-0">
@@ -342,19 +349,23 @@
                 
                             `;
                             technicianTableBody.appendChild(row);
+                            hideSpinner();
                         });
                     } else {
                         const row = document.createElement('tr');
                         row.innerHTML = '<td colspan="4">No technicians found.</td>'; 
                         technicianTableBody.appendChild(row);
+                        hideSpinner();
                     }
                 })
                 .catch(error => {
                     console.error('Error fetching technicians:', error);
+                    hideSpinner();
                 });
         }
 
         function getTechnicianFieldsForDropdown() {
+            showSpinner();
             fetch('/getfields/', {
                 method: 'POST', 
                 headers: {
@@ -364,6 +375,7 @@
             }) 
                 .then(response => response.json())
                 .then(data => {
+                    hideSpinner();
                     const technicianFieldSelect = document.getElementById('technicianfield');
                     technicianFieldSelect.innerHTML = '<option value="" disabled selected>Select Field</option>'; // Clear previous options
                     data.forEach(field => {
@@ -372,9 +384,11 @@
                         option.text = field.field_name;
                         technicianFieldSelect.add(option);
                     });
+                    hideSpinner();
                 })
                 .catch(error => {
                     console.error('Error fetching technician fields:', error);
+                    hideSpinner();
                 });
         }
         function saveTechnician(technicianNumber) {
@@ -400,6 +414,7 @@
                 const phoneRegex = /^[6-9]\d{9}$/;  
                 return phoneRegex.test(cleanedPhoneNumber);
             }
+            showSpinner();
             fetch('/savetechnician/', {
                 method: 'POST',
                 headers: {
@@ -418,14 +433,18 @@
                 if (data.success) {
                     alert('Changes saved successfully.');
                     getTechnicians(); 
+                    hideSpinner();
                 } else {
                     alert('Failed to save changes: ' + data.error); 
+                    hideSpinner();
                 }
             })
             .catch(error => console.error('Error:', error));
+            hideSpinner();
         }
         function deleteTechnician(technicianNumber, technicianField) {
             if (confirm("Are you sure you want to delete this Technician? This action cannot be undone.")) {
+                showSpinner();
                 fetch('/deletetechnician/', {
                     method: 'POST',
                     headers: {
@@ -439,14 +458,18 @@
                 })
                 .then(response => response.json())
                 .then(data => {
+                    hideSpinner();
                     if (data.success) {
                         alert('Technician deleted successfully.');
                         getTechnicians(); 
+                        hideSpinner();
                     } else {
                         alert('Failed to delete technician: ' + data.error); 
+                        hideSpinner();
                     }
                 })
                 .catch(error => console.error('Error:', error));
+                hideSpinner();
             }
         }
 
@@ -465,6 +488,7 @@
             event.preventDefault();
             const form = event.target;
             const formData = new FormData(form);
+            showSpinner();
             fetch(form.action, {
                 method: form.method,
                 headers: {
@@ -474,19 +498,24 @@
             })
             .then(response => response.json())
             .then(data => {
+                hideSpinner();
                 if (data.success) {
                     alert('Technician added successfully.');
                     form.reset(); 
                     hideAddForms(); 
                     getTechnicians(); 
+                    hideSpinner();
                 } else {
                     alert('Failed to add technician.'+data.error); 
+                    hideSpinner();
                 }
             })
             .catch(error => {
                 console.error('Error adding technician:', error);
                 alert('Error adding technician. Please try again later.', error);
+                hideSpinner();
             });
+            hideSpinner();
         });
 
         function getCookie(name) {
