--- a/queryraiserapp/templates/admintechnicianreports.html
+++ b/queryraiserapp/templates/admintechnicianreports.html
@@ -12,103 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
 </head>
 <style>
-    .overlay {
-        display: none; 
-        position: fixed; 
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7); 
-        z-index: 1000; 
-        transition: opacity 0.3s ease-in-out; 
-        
-    }
-    
-    .overlay-content {
-        background-color: #fff;
-        margin: 10% auto; 
-        padding: 30px;
-        border-radius: 10px;
-        max-width: 500px;
-        position: relative;
-        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-        animation: slideIn 0.4s ease-in-out; 
-        text-align: center; 
-        font-family: 'Arial', sans-serif; 
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .close-button {
-        position: absolute;
-        top: 15px;
-        right: 15px;
-        font-size: 24px;
-        font-weight: bold;
-        color: #888;
-        cursor: pointer;
-        transition: color 0.2s;
-    }
-    
-    .close-button:hover {
-        color: #e74c3c;
-    }
-    .overlay-content h3 {
-        font-size: 24px;
-        margin-bottom: 15px;
-        color: #333;
-    }
-    .overlay-content p {
-        font-size: 16px;
-        margin: 10px 0;
-        color: #555;
-        line-height: 1.5;
-    }
-    
-    .overlay-content p strong {
-        color: #333;
-    }
-    
-    @keyframes slideIn {
-        from {
-            transform: translateY(-30px);
-            opacity: 0;
-        }
-        to {
-            transform: translateY(0);
-            opacity: 1;
-        }
-    }
-    .overlay-content h3 {
-        font-size: 24px;
-        margin-bottom: 20px;
-        color: #007bff;
-        text-align: center; 
-    }
-    
-    .complaint-details {
-        display: grid;
-        grid-template-columns: 1fr 2fr; 
-        gap: 10px; 
-        align-items: center;
-        margin-bottom: 20px;
-    }
-    
-    .complaint-details label {
-        font-weight: bold;
-        text-align: left;
-        min-width: 90px;
-    }
-    
-    .complaint-details span {
-        text-align: left;
-    }
-    
-    .assign-technician {
-        text-align: center; 
-    }
-   
   .overlay-header {
     text-align: center;
     margin-bottom: 20px;
@@ -123,8 +26,8 @@
     margin-right: 20px; 
   }
   .chart-container {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
   }
     </style>
 <body>
@@ -161,6 +64,11 @@
         </div>
     </header>
     <div class="main-container">
+        <div id="loading-spinner" class="spinner-overlay" style="display: none;">
+            <div class="spinner">
+                <img src="{% static 'images/loading.gif' %}" alt="">
+            </div>
+        </div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'admindashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -425,6 +333,7 @@
     </script>
     <script>
     function getTechnicianPerformance(){
+        showSpinner();
         fetch('/admintechnicianperformance/', {
             method: 'POST',
             headers: {
@@ -435,6 +344,7 @@
         .then(response => response.json())
         .then(data => {
             if (data.success) {
+                hideSpinner();
                 const technicianPerformance = data.technician_performance;
                 const tbody = document.querySelector('.technicianperformance table tbody');
                 tbody.innerHTML = ''; 
@@ -442,6 +352,7 @@
                     const row = document.createElement('tr');
                     row.innerHTML = '<td colspan="5">No Technician found.</td>';
                     tbody.appendChild(row);
+                    hideSpinner();
                 }
                 else{
                     technicianPerformance.forEach(technician => {
@@ -462,13 +373,16 @@
                         `;
                         tbody.appendChild(row);
                     });
+                    hideSpinner();
                 }
             } else {
                 console.error('Error fetching technician performance:', data.error);
+                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching technician performance:', error);
+            hideSpinner();
         });
     }
     let technicianPieChart = null; 
