--- a/queryraiserapp/templates/index.html
+++ b/queryraiserapp/templates/index.html
@@ -42,9 +42,9 @@
                     <label class="user-label" for="username">Username*</label> 
                 </div>
                 <div class="form-group" id="password-field">
-                    <input type="password" id="password" name="password" placeholder=" " required>
+                    <input type="password" class="password" id="password-dean" name="password" placeholder=" " required>
                     <label class="password-label" for="password">Password*</label>
-                    <span class="toggle-password" onclick="togglePasswordVisibility()">
+                    <span class="toggle-password" onclick="togglePasswordVisibility('dean')">
                         <i class="fa fa-eye"></i>
                     </span>                    
                 </div>                
@@ -70,9 +70,9 @@
                     <label class="user-label" for="username">Username*</label> 
                 </div>
                 <div class="form-group" id="password-field">
-                    <input type="password" id="password" name="password" placeholder=" " required>
+                    <input type="password" class="password" id="password-faculty" name="password" placeholder=" " required>
                     <label class="password-label" for="password">Password*</label>
-                    <span class="toggle-password" onclick="togglePasswordVisibility()">
+                    <span class="toggle-password" onclick="togglePasswordVisibility('faculty')">
                         <i class="fa fa-eye"></i>
                     </span>                    
                 </div>                
@@ -98,22 +98,22 @@
                     <label class="user-label" for="username">Username*</label> 
                 </div>
                 <div class="form-group" id="password-field">
-                    <input type="password" id="password" name="password" placeholder=" " required>
+                    <input type="password" class="password" id="password-technician" name="password" placeholder=" " required>
                     <label class="password-label" for="password">Password*</label>
-                    <span class="toggle-password" onclick="togglePasswordVisibility()">
+                    <span class="toggle-password" onclick="togglePasswordVisibility('technician')">
                         <i class="fa fa-eye"></i>
                     </span>                    
-                </div>                
+                </div>                 
                 <button type="submit" class="btn-login" {% if blocked %}disabled{% endif %}>Login</button>
             </form>            
         </div> 
     </main>
 
     <script>
-        function togglePasswordVisibility() {
-            const passwordInput = document.getElementById("password");
-            const toggleIcon = document.querySelector(".toggle-password i");
-        
+        function togglePasswordVisibility(userType) { 
+            const passwordInput = document.getElementById(`password-${userType}`); 
+            const toggleIcon = passwordInput.parentElement.querySelector(".toggle-password i"); 
+
             if (passwordInput.type === "password") {
                 passwordInput.type = "text";
                 toggleIcon.classList.remove("fa-eye");
