--- a/queryraiserapp/templates/techniciandashboard.html
+++ b/queryraiserapp/templates/techniciandashboard.html
@@ -51,6 +51,11 @@
         </div>
     </header>
     <div class="main-container">
+        <div id="loading-spinner" class="spinner-overlay" style="display: none;">
+            <div class="spinner">
+                <img src="{% static 'images/loading.gif' %}" alt="">
+            </div>
+        </div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link active" href="{% url 'techniciandashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -84,7 +89,12 @@
                           </svg>Update Status</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'admintechnician' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
+                <li class="nav-item"><a class="nav-link" href="{% url 'technicianresolvedpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                    <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
+                  </svg>Resolved Complaints</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'technicianpendingpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
                     <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
                     <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
                     <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
@@ -104,7 +114,7 @@
                     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                 </svg>Profile</a></li>                    
                 <li class="logout-item">
-                    <a class="nav-link" href="{% url 'adminlogout' %}">
+                    <a class="nav-link" href="{% url 'technician_logout_view' %}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" />
                             <polyline points="16 17 21 12 16 7" />
@@ -160,7 +170,7 @@
                                           </svg>
                                     
                                 </th>
-                                <th style="border: 1px solid #dc3545; background-color: #f8d7da; ">
+                                <th style="border: 1px solid #A9A9A9; background-color: #e9e9e9;; ">
                                     <span>Closed Complaints</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <rect x="3" y="11" width="18" height="10" rx="2" ry="2" />
@@ -234,6 +244,7 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script>
         function getcomplaintscount() {
+        showSpinner();
         fetch('/techniciancomplaintcount/', {
             method: 'POST',
             headers: {
@@ -243,7 +254,6 @@
         })
         .then(response => response.json()) 
         .then(data => {
-            console.log(data);
 
             const quickstatsTableBody = document.querySelector('#quickstatstable tbody');
             quickstatsTableBody.innerHTML = '';
@@ -254,8 +264,8 @@
                 row.innerHTML = `
                     <td style="color:#007bff;">${complaintCounts.assigned}</td> 
                     <td style="color:#28a745;">${complaintCounts.resolved}</td>
-                    <td style="color:#ffc107;">${complaintCounts.pending_review}</td> 
-                    <td style="color:#dc3545;">${complaintCounts.closed}</td> 
+                    <td style="color:#ffc107;">${complaintCounts.pending}</td> 
+                    <td style="color:#A9A9A9;">${complaintCounts.closed}</td> 
                 `;
                 quickstatsTableBody.appendChild(row); 
                 const chartLabels = Object.keys(complaintCounts);
@@ -273,7 +283,7 @@
                                 'rgba(0, 123, 255, 0.5)',
                                 'rgba(40, 167, 69, 0.5)',   
                                 'rgba(255, 193, 7, 0.5)',
-                                'rgba(220, 53, 69, 0.5)'  
+                                'rgba(169, 169, 169, 0.5)'  
                             ],
                         }]
                     },
@@ -291,20 +301,24 @@
                            'rgba(0, 123, 255, 0.5)', 
                             'rgba(40, 167, 69, 0.5)',
                             'rgba(255, 193, 7, 0.5)',
-                            'rgba(220, 53, 69, 0.5)'  
+                            'rgba(169, 169, 169, 0.5)'  
                         ],
                     }]
                 },
             });
+            hideSpinner();
             } else {
                 console.error('Error fetching Complaints count:', data.error);
+                hideSpinner();
             }
         })
         .catch(error => {
             console.error('Error fetching Complaints count:', error);
+            hideSpinner();
         });
     }
     function getrecentcomplaints(){
+        showSpinner();
         fetch('/technicianrecentcomplaints/',{
             method: 'POST',
             headers: {
@@ -317,11 +331,12 @@
             console.log(data)
             const recentcomplaintTableBody = document.querySelector('#recentcomplaintstable tbody');
             recentcomplaintTableBody.innerHTML = '';
-
+            hideSpinner();
             if(data.length===0){
                 const row = document.createElement('tr');
                 row.innerHTML = '<td colspan="7">No Complaints found at this time.</td>';
                 recentcomplaintTableBody.appendChild(row);
+                hideSpinner();
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -330,16 +345,18 @@
                         <td>${complaint.created_at}</td> 
                         <td style="color:#007bff;">${complaint.faculty__faculty_name}</td> 
                         <td style="color:#525b75;">${complaint.department__department_name}</td>
-                        <td style="color:#000;font-weight:590;">${complaint.title}</td> 
-                        <td style="color:#525b75;">${complaint.status}</td>
+                        <td style="font-weight:570;">${complaint.title}</td> 
+                        <td style="font-weight:570">${complaint.status}</td>
                         <td></td>                    
                     `;
                     recentcomplaintTableBody.appendChild(row);
+                    hideSpinner();
                 });
             }
         })
         .catch(error => {
             console.error('Error fetching recent complaints:', error);
+            hideSpinner();
         });
     }
     document.addEventListener('DOMContentLoaded', () => {
