--- a/queryraiserapp/templates/technicianresolvedcomplaints.html
+++ b/queryraiserapp/templates/technicianresolvedcomplaints.html
@@ -9,176 +9,8 @@
     <link rel="stylesheet" href="{% static 'css/pannelstyles.css' %}">
     <link rel="stylesheet" href="{% static 'css/technicianstyles.css' %}">
     <script src="{% static 'js/technician.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<style>
-  .container {
-    display: flex;
-    justify-content: space-around;
-    gap: 20px;
-    margin-top: 20px; 
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-
-  .profile-card,
-  .address-card {
-    max-height: 250px;
-    background-color: #fff;
-    border-radius: 10px;
-    
-    padding: 20px;
-    transition: transform 0.2s ease;
-    flex: 1;
-    border: 1px solid #cbd0dd;
-  }
-  .dark-mode .profile-card,.dark-mode .address-card{
-    background: #141824;
-    border: 1px solid #373e53;
-  }
-  .dark-mode #changepassword{
-    color: #cbd0dd;
-    border: 1px solid #373e53;
-
-  }
-  .dark-mode #changepassword:hover{
-    background: #141824;
-  }
-  .profile-card{
-      width: 50%;
-  }
-  .address-card{
-      width: 40%;
-  }
-  .rating-info {
-    color: #888;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 40px;
-    font-size: 14px;
-  }
-
-  .profile-header {
-    display: flex;
-    align-items: center;
-    margin-bottom: 70px;
-  }
-
-  .profile-avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-right: 20px;
-  }
-
-  .profile-avatar img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .profile-info h3 {
-    font-size: 20px;
-    margin-left: 40px;
-    margin-bottom: 5px;
-  }
-
-
-  .profile-stats {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid #ddd;
-    border-style: dashed;
-    border-left:none ;
-    border-right: none;
-    border-bottom: none;
-    padding-top: 10px;
-  }
-  .dark-mode .profile-stats{
-    border-top: 1px solid #373e53;
-    border-style: dashed;
-    border-left:none ;
-    border-right: none;
-    border-bottom: none;
-  }
-  .profile-stats h6 {
-    font-size: 13px;
-    color: #555;
-    font-weight: 590;
-  }
-
-  .profile-stats p {
-      margin-top: 10px;
-      font-size: 20px;
-      color: #333;
-  }
-
-  .address-header {
-      margin-top: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .address-header h3 {
-    font-size: 20px;
-    margin: 0;
-    margin-bottom: 15px;
-  }
-  .address-content h5 {
-    font-size: 15px;
-    color: #555;
-    margin: 0;
-    margin-bottom: 5px;
-    font-weight: 600;
-  }
-
-  .address-content p,
-  .address-content a {
-    color: #333;
-    text-decoration: none;
-    font-size: 13px;
-    margin: 0;
-    margin-bottom: 15px;
-  }
-  .dark-mode .address-content h5{
-    color: #e9e9e9;
-  }
-  .dark-mode .address-content p,.dark-mode .address-content{
-    color: #cbd0dd;
-  }
-  .profile-info h3 {
-    font-size: 18px; 
-    margin-bottom: 5px;
-  }
-
-  .profile-stats {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px dashed #ddd;
-    padding-top: 10px;
-  }
-
-  .profile-stats div {
-    text-align: center; 
-  }
-
-  .profile-stats h6 {
-    font-size: 12px; 
-    color: #555;
-    font-weight: 600;
-    margin-bottom: 5px; 
-  }
-
-  .profile-stats p {
-    font-size: 18px;
-    color: #333;
-    font-weight: 400;
-    margin: 0; 
-  }
-
-</style>
 <body>
     <header>
         <div class="header-container">
@@ -219,11 +51,11 @@
         </div>
     </header>
     <div class="main-container">
-      <div id="loading-spinner" class="spinner-overlay" style="display: none;">
-          <div class="spinner">
-              <img src="{% static 'images/loading.gif' %}" alt="">
-          </div>
-      </div>
+        <div id="loading-spinner" class="spinner-overlay" style="display: none;">
+            <div class="spinner">
+                <img src="{% static 'images/loading.gif' %}" alt="">
+            </div>
+        </div>
         <nav class="sidebar">
             <ul>
                 <li><a class="nav-link" href="{% url 'techniciandashboard' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart">
@@ -257,10 +89,10 @@
                           </svg>Update Status</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'technicianresolvedpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
-                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                  <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
-                </svg>Resolved Complaints</a>
+                <li class="nav-item"><a class="nav-link active" href="{% url 'technicianresolvedpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                    <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
+                  </svg>Resolved Complaints</a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'technicianpendingpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
                     <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
@@ -278,7 +110,7 @@
                 <li><a class="nav-link" href="{% url 'technicianratingpage' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
                     <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
                   </svg>Rating</a></li>
-                <li><a class="nav-link active" href="{% url 'technicianprofilepage' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                <li><a class="nav-link" href="{% url 'technicianprofilepage' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                 </svg>Profile</a></li>                    
                 <li class="logout-item">
@@ -296,66 +128,33 @@
         <main class="content"> 
             <div class="subnav d-flex justify-content-between align-items-center"> 
                 <div>
-                    <h3>Profile</h3>
+                    <h3>All Complaints</h3>
+                </div>
+            </div>
+            <div class="resolvedcomplainttable">
+                <div class="tablelist">
+               
+                    <div class="table-container">
+                        <table class="tables" id="resolvedcomplaintstable">
+                            <thead>
+                                <tr>
+                                    <th>Complaint ID</th>
+                                    <th>Issue Type</th>
+                                    <th>Date Raised</th>
+                                    <th>Faculty Name</th>
+                                    <th>Faculty Number</th>
+                                    <th>Department</th>
+                                    <th>Date Resolved</th>
+                                    <th>Faculty Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                </tbody>
+                        </table>
+                    </div>
 
                 </div>
-                <div class="addbranches" style="display: flex;gap: 10px;"> 
-                    <div>
-                        <button id="changepassword" onclick="" style="gap: 3px;padding: 8px;">
-                            <svg class="svg-inline--fa fa-key me-2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="key" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="" width="16" height="16"><path fill="currentColor" d="M336 352c97.2 0 176-78.8 176-176S433.2 0 336 0S160 78.8 160 176c0 18.7 2.9 36.8 8.3 53.7L7 391c-4.5 4.5-7 10.6-7 17v80c0 13.3 10.7 24 24 24h80c13.3 0 24-10.7 24-24V448h40c13.3 0 24-10.7 24-24V384h40c6.4 0 12.5-2.5 17-7l33.3-33.3c16.9 5.4 35 8.3 53.7 8.3zM376 96a40 40 0 1 1 0 80 40 40 0 1 1 0-80z"></path></svg>
-                          <span>Change Password</span>
-                          
-                        </button>
-                    </div>
-                    
-                </div>
-                
             </div>
-            <div class="container">
-                <div class="profile-card">
-                  <div class="profile-content">
-                    <div class="profile-header">
-                      <div class="profile-avatar">
-                        <img src="{% static 'images/techincian.png' %}" alt="Profile Image">
-                      </div>
-                      <div class="profile-info">
-                        <h3></h3>
-                        <p class="rating-info">Average Rating : </p>
-                      </div>
-                    </div>
-                    <div class="profile-stats">
-                      <div>
-                        <h6 style="color:#007bff;">Complaints</h6>
-                        <p id="allcomplaints" style="color:#007bff;"></p>
-                      </div>
-                      <div>
-                        <h6 style="color:#dc3545;">Pending</h6>
-                        <p id="pendingcomplaints" style="color:#dc3545;"></p>
-                      </div>
-                      <div>
-                        <h6 style="color: #555;">Closed</h6>
-                        <p id="closedcomplaints" style="color: #555;"></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="address-card">
-                  <div class="address-header">
-                    <h3>Details</h3>
-                  </div>
-                  <div class="address-content">
-                    <h5>Name</h5>
-                    <p id="technician_name"></p>
-            
-                    <h5>Phone Number</h5>
-                    <p id="technician_number"></p>
-            
-                    <h5>Field</h5>
-                    <p id="technician_field"></p>
-                  </div>
-                </div>
-            
-               
         </main> 
         <footer class="footer position-absolute">
             <div>
@@ -366,68 +165,68 @@
             </div>
       </footer> 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script>
-    const navLinks = document.querySelectorAll('.nav-link');
-    const submenus = document.querySelectorAll('.submenu');
-
-    navLinks.forEach(link => {
-        link.addEventListener('click', function(e) {
-            if (this.parentElement.classList.contains('has-submenu')) {
-                e.preventDefault();
-                const submenu = this.nextElementSibling;
-                submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
-                
-            }
+        const navLinks = document.querySelectorAll('.nav-link');
+        const submenus = document.querySelectorAll('.submenu');
+        navLinks.forEach(link => {
+            link.addEventListener('click', function(e) {
+                if (this.parentElement.classList.contains('has-submenu')) {
+                    e.preventDefault();
+                    const submenu = this.nextElementSibling;
+                    submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
+                    
+                }
+            });
         });
-    });
-
-    </script>
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script>
-    
-
-    function getTechnicianProfile() {
-      showSpinner();
-        fetch('/technicianprofile/', {
+    function getallcomplaints(){
+        showSpinner();
+        fetch('/technicianresolvedcomplaints/',{
             method: 'POST',
             headers: {
-            'Content-Type': 'application/json',
-            'X-CSRFToken': getCookie('csrftoken') 
-            },
+                'X-CSRFToken': getCookie('csrftoken'),
+                'Content-Type': 'application/json'
+        }
         })
-        .then(response => {
-          hideSpinner();
-            if (!response.ok) {
-            throw new Error('Network response was not ok');
-            }
-            return response.json();
-        })
+        .then(response => response.json()) 
         .then(data => {
-            if (data.success) {
-              hideSpinner();
-            document.querySelector('.profile-info h3').textContent = data.technician_name;
-            document.querySelector('.rating-info').textContent = `Average Rating : ${data.complaint_counts.average_rating}`;
-            document.getElementById('allcomplaints').textContent = data.complaint_counts.all;
-            document.getElementById('pendingcomplaints').textContent = data.complaint_counts.pending;
-            document.getElementById('closedcomplaints').textContent = data.complaint_counts.closed; 
-            document.querySelector('#technician_name').textContent = data.technician_name; 
-            document.querySelector('#technician_number').textContent = data.technician_number; 
-            document.querySelector('#technician_field').textContent = data.technician_field; 
+            hideSpinner();
+            const resolvedcomplaintTableBody = document.querySelector('#resolvedcomplaintstable tbody');
+            resolvedcomplaintTableBody.innerHTML = '';
+
+            if(data.length===0){
+                const row = document.createElement('tr');
+                row.innerHTML = '<td colspan="8">No Resolved Complaints found at this time.</td>';
+                resolvedcomplaintTableBody.appendChild(row);
+                hideSpinner();
             } else {
-              hideSpinner();
-            alert(data.error);
+                data.forEach(complaint => { 
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td style="color:#007bff;">${complaint.id}</td> 
+                        <td style="font-weight:570;">${complaint.title}</td> 
+                        <td>${complaint.created_at}</td> 
+                        <td style="color:#007bff;">${complaint.faculty__faculty_name}</td> 
+                        <td style="font-weight:570;">${complaint.faculty__faculty_phonenumber}</td>
+                        <td style="color:#525b75;">${complaint.department__department_name}</td>
+                        <td style="color:#525b75;">${complaint.technician_resolve_time}</td>
+                        <td style="font-weight:570">${complaint.status}</td>                   
+                    `;
+                    resolvedcomplaintTableBody.appendChild(row);
+                    hideSpinner();
+                });
             }
         })
         .catch(error => {
-          hideSpinner();
-            console.error('There was a problem with the fetch operation:', error);
+            hideSpinner();
+            console.error('Error fetching resolved complaints:', error);
         });
     }
-    document.addEventListener('DOMContentLoaded', function () {
-        getTechnicianProfile();
+    document.addEventListener('DOMContentLoaded', () => {
+        getallcomplaints();
     });
-
-   
     function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
