--- a/static/css/adminfaculty.css
+++ b/static/css/adminfaculty.css
@@ -45,6 +45,10 @@
     display: flex;
     flex-direction: column;
 }
+.dark-mode .addfacultyform-container{
+    background: #141824;
+    border: 1px solid #373e53;
+}
 #form-row {
     margin-bottom: 20px;
     display: flex;
@@ -58,7 +62,6 @@
 }
 
 #form-row input[type="text"],
-#form-row input[type="file"],
 #form-row input[type="number"],
 #form-row input[type='tel'],
 #form-row select {
@@ -68,6 +71,25 @@
     padding: 8px;
     box-sizing: border-box;
 }
+#form-row input[type="text"]:focus,
+#form-row input[type="number"]:focus,
+#form-row input[type='tel']:focus,
+#form-row select:focus{
+    outline: none;
+    border-color: #4285f4; 
+    box-shadow: 0px 0px 8px rgba(66, 133, 244, 0.5); 
+}
+.dark-mode #form-row input[type="text"],
+.dark-mode #form-row input[type="number"],
+.dark-mode #form-row input[type='tel'],
+.dark-mode #form-row select {
+    background: #0f111a;
+    border: 1px solid #373e53;
+}
+.dark-mode #form-row select{
+    color: #fff;
+}
+
 #form-row input[type="file"]{
     border: none;
     border-radius: 0px;
@@ -106,7 +128,7 @@
     font-weight: 100;
     font-size: 20px;
     margin-top: 10px;
-    background-color: white;
+    background-color: #fff;
     padding-left: 20px;
     padding-right: 20px;
     border: 1px solid rgba(203, 208, 221, 0.54);
@@ -117,7 +139,6 @@
 }
 .table-container{
     margin-top: 12px;
-    background-color: white;
 }
 #facultytable {
     width: 100%;
@@ -130,18 +151,11 @@
     font-size: 13px;
     text-align: left;
     font-weight: 200;
-    color: #9fa6bc;
 }
 
 #facultytable th {
-    border-bottom: 1px solid rgba(203, 208, 221, 0.54);
-    color: black;
     font-size: 16px;
     font-weight: 590;
-}
-
-#facultytable tbody tr{
-    border-bottom: 1px solid rgba(203, 208, 221, 0.54);
 }
 #facultytable td img {
     min-width: 40px;
