--- a/static/css/technicianstyles.css
+++ b/static/css/technicianstyles.css
@@ -7,10 +7,12 @@
     padding-right: 20px;
     border: 1px solid rgba(203, 208, 221, 0.54);
     padding-bottom: 10px;
+    overflow-x: auto;
+    border-left: none;
+    border-right: none;
 }
 .table-container{
     margin-top: 12px;
-    background-color: #fff;
 }
 .tables {
     width: 100%;
@@ -18,20 +20,35 @@
     margin-bottom: 10px;
 }
 .tables th, .tables  td {
-    padding:15px;
+    padding:20px;
     font-size: 13px;
     text-align: left;
     font-weight: 200;
-
 }
 .tables  th {
     border-bottom: 1px solid rgba(203, 208, 221, 0.54);
-    color: black;
     font-size: 16px;
     font-weight: 590;
+    color: #31374a;
 }
+
 .tables  tbody tr{
     border-bottom: 1px solid rgba(203, 208, 221, 0.54);
+}
+.tables td img {
+    min-width: 40px;
+    min-width: 40px;
+    max-width: 40px;
+    max-height: 40px;
+    vertical-align: middle;
+    border-radius: 50%;
+}
+#viewall{
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+#viewall:hover{
+    text-decoration: underline;
 }
 .tables td img {
     min-width: 40px;
@@ -173,4 +190,18 @@
 }
 .save-button:hover {
     background-color: #0056b3;
+}
+.commentfield{
+    min-height: 70px;
+    resize: none;
+
+    border-radius:5px ;
+}
+.commentfield:focus{
+    outline: none;
+    border-color: #4285f4; 
+    box-shadow: 0px 0px 8px rgba(66, 133, 244, 0.5); 
+}
+.dark-mode .commentfield{
+    color: #fff;
 }
